# first_project

./: CMakeLists.txt  README.md  compare.cpp  compare.h  greicio_analize.cpp  greicio_analize.h  myBib.cpp  myBib.h  myBib1.cpp  myBib1.h  speedTest.cpp  speedTest.h  strategija1.cpp  strategija1.h  strategija2.cpp  strategija2.h  studentai1.txt  studentai2.txt  v1_0.cpp  v1_0.sln  v_01.cpp  v_01.sln  v_01_vector.cpp  v_02.cpp  v_02_pilnas.cpp  v_03.cpp  v_04.cpp  v_04_papildymas.cpp  v_05.cpp
